fix responsive on mobile | add mixins with theme change for dark prfer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @use "./utilities/" as *;
+@use "./themes/" as *;
 @use "./base/_reset" as *;
 @use "./layout/" as *;
 @use "./pages/" as *;
@@ -28,5 +29,17 @@
 
 	&-3 {
 		border: 1px solid yellow;
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	@include dark-theme;
+
+	.logo {
+		filter: invert(1);
+	}
+
+	.work-logo {
+		filter: invert(0);
 	}
 }
